# fomo25-baseline-mae

./: .gitignore  README.md  finetune.sh  pretrain.sh  process_finetune_dataset.sh  pyproject.toml
src/: evaluator.py  finetune.py  pretrain.py
src/augmentations/: augmentation_composer.py  mask.py
src/data/: cls_datamodule.py  datamodule.py  dataset.py  task_configs.py
src/data/fomo-60k/: preprocess.py
src/data/preprocess/: fomo1.py  fomo2.py  fomo3.py  fomo4.py  run_hbn_preprocessing.py  run_preprocessing.py
src/models/: self_supervised.py  supervised_base.py  supervised_cls.py  supervised_reg.py  supervised_seg.py
src/models/networks/: heads.py  unet.py
src/utils/: utils.py
